upgrade to JDK 21 (#3)
Summary
Upgrade to JDK 21

Link any related JIRA Issue
https://hertzdigital.atlassian.net/browse/RATE-2048